--- a/project/AnimationBullet/style.css
+++ b/project/AnimationBullet/style.css
@@ -19,6 +19,7 @@ body {
   border: 2px solid red;
   background: red;
   color: white;
+  visibility: visible;
 }
 .container {
   background: white;
